grammar.js
    program: ($) =>
      choice(
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          field("commands", $.complete_commands),
          optional(field("trailing", $.linebreak)),
          optional($._free_trailing_layout),
        ),
        seq(
          optional(field("leading", $.linebreak)),
          optional($._free_trailing_layout),
        ),
      ),

    complete_commands: ($) =>
      seq(
        field("command", $.complete_command),
        repeat(
          seq(
            field("separator", $.newline_list),
            optional($._horizontal_layout),
            field("command", $.complete_command),
          ),
        ),
      ),

    complete_command: ($) =>
      seq(
        field("body", $.list),
        optional(
          seq(
            optional($._separator_boundary_layout),
            field("terminator", $.separator_op),
          ),
        ),
      ),

    list: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            optional($._separator_boundary_layout),
            field("separator", $.separator_op),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    and_or: ($) =>
      seq(
        field("pipeline", $.pipeline),
        repeat(
          seq(
            commandBoundaryLayout($),
            field("operator", choice($.and_if, $.or_if)),
            continuedLinebreakLayout($),
            field(
              "pipeline",
              choice($.pipeline, alias($._recovering_pipeline, $.pipeline)),
            ),
          ),
        ),
      ),

    pipeline: ($) =>
      choice(
        seq(
          optional(
            seq(field("negation", $.bang), optional($._horizontal_layout)),
          ),
          field("sequence", $.pipe_sequence),
        ),
        prec.dynamic(
          -20,
          seq(
            field("negation", $.bang),
            optional($._horizontal_layout),
            field(
              "sequence",
              alias($._recovering_pipe_sequence, $.pipe_sequence),
            ),
          ),
        ),
      ),

    pipe_sequence: ($) =>
      seq(
        field("command", $.command),
        repeat(
          seq(
            commandBoundaryLayout($),
            "|",
            continuedLinebreakLayout($),
            field(
              "command",
              choice($.command, alias($._recovering_command, $.command)),
            ),
          ),
        ),
      ),

    command: ($) =>
      choice(
        field("body", $.simple_command),
        $._redirectable_compound_command,
        field("body", $.function_definition),
        prec.dynamic(-1000, invalidCommandRecoveryField($)),
      ),

    _redirectable_compound_command: ($) => redirectableCompoundCommand($),

    _recovering_pipeline: ($) =>
      field("sequence", alias($._recovering_pipe_sequence, $.pipe_sequence)),

    _recovering_pipe_sequence: ($) =>
      field("command", alias($._recovering_command, $.command)),

    _recovering_command: ($) => field("recovery", $.command_recovery),

    _separator_boundary_layout: ($) => $._horizontal_layout,

    simple_command: ($) =>
      choice(
        seq(
          field("prefix", $.cmd_prefix),
          optional(
            seq(
              $._word_separator,
              field("word", $.cmd_word),
              optional(field("suffix", $.cmd_suffix)),
            ),
          ),
        ),
        seq(field("name", $.cmd_name), optional(field("suffix", $.cmd_suffix))),
      ),

    cmd_prefix: ($) =>
      seq(
        choice(
          field("assignment", $.assignment_word),
          field("redirect", $.io_redirect),
        ),
        repeat(
          choice(
            seq($._word_separator, field("assignment", $.assignment_word)),
            field(
              "redirect",
              alias($._io_redirect_without_descriptor, $.io_redirect),
            ),
            seq(
              repeat1($.line_continuation),
              field(
                "redirect",
                alias($._io_redirect_without_descriptor, $.io_redirect),
              ),
            ),
            seq($._word_separator, field("redirect", $.io_redirect)),
          ),
        ),
      ),

    cmd_name: ($) => $.word,

    cmd_suffix: ($) =>
      repeat1(
        choice(
          seq($._word_separator, field("word", $.word)),
          field(
            "redirect",
            alias($._io_redirect_without_descriptor, $.io_redirect),
          ),
          seq(
            repeat1($.line_continuation),
            field(
              "redirect",
              alias($._io_redirect_without_descriptor, $.io_redirect),
            ),
          ),
          seq($._word_separator, field("redirect", $.io_redirect)),
        ),
      ),

    _io_redirect_without_descriptor: ($) =>
      field("body", choice($.io_file, $.io_here)),

    assignment_word: ($) =>
      prec.dynamic(
        ASSIGNMENT_WORD_PRECEDENCE,
        prec.right(
          1,
          seq(
            $._name_equals_begin,
            field("name", $.variable_name),
            repeat($.line_continuation),
            "=",
            optional(field("value", $.assignment_value)),
            optional(lineContinuationRun($)),
          ),
        ),
      ),

    variable_name: ($) => nameSource($),

    assignment_value: ($) => $._assignment_source_word,

    _assignment_source_word: ($) =>
      choice(
        prec.right(
          seq(
            alias($._assignment_tilde_expansion, $.tilde_expansion),
            optional($._assignment_source_word_tail),
          ),
        ),
        prec.right(
          seq(
            choice($._assignment_colon_part, $._assignment_word_part),
            optional($._assignment_source_word_tail),
          ),
        ),
      ),

    word: ($) => $._source_word,

    _source_word: ($) =>
      choice(
        prec.right(seq($.tilde_expansion, optional($._source_word_tail))),
        prec.right(seq($._word_part, optional($._source_word_tail))),
      ),

    _source_word_tail: ($) =>
      repeat1(choice(alias($._literal_hash, $.literal), $._word_part)),

    tilde_expansion: ($) => tildeExpansion($, $.tilde_user, $._word_tilde_end),

    tilde_user: ($) =>
      seq(
        choice(alias($._literal_hash, $.literal), $._word_non_slash_part),
        optional($._source_word_tail),
      ),

    _word_non_slash_part: ($) =>
      choice(
        $._word_bracket_part,
        $.literal,
        $.pattern_star_source,
        $.pattern_question_source,
        $._word_structured_part,
      ),

    literal: ($) =>
      prec.right(choice("$", logicalPlainSource($, wordPlainChunk($)))),

    pattern_star_source: (_) => token(prec(-1, "*")),

    pattern_question_source: (_) => token(prec(-1, "?")),

    pattern_bracket_source: ($) =>
      patternBracketExpression($, $.pattern_bracket_members_source),

    pattern_bracket_negation_source: ($) =>
      prec.dynamic(PATTERN_PRECEDENCE.negation, $._pattern_bracket_exclamation),

    pattern_bracket_members_source: ($) =>
      patternBracketList(
        $,
        $._pattern_bracket_member,
        alias($._pattern_initial_bracket_range, $.pattern_bracket_range_source),
      ),

    _pattern_bracket_member: ($) =>
      choice(
        $.pattern_character_class_source,
        $.pattern_collating_symbol_source,
        $.pattern_equivalence_class_source,
        $.pattern_bracket_range_source,
        $.pattern_bracket_character_source,
        $._pattern_operator_bracket_character,
        $.pattern_bracket_hyphen_source,
        $.escaped_character,
        $.single_quoted,
        $.double_quoted,
        $.dollar_single_quoted,
        $.parameter_expansion,
        $.command_substitution,
        $.arithmetic_expansion,
        $.backquote_substitution,
      ),

    pattern_bracket_range_source: ($) =>
      patternBracketRange($, $._pattern_bracket_range_endpoint),

    _pattern_initial_bracket_range: ($) =>
      patternInitialBracketRange($, $._pattern_bracket_range_endpoint),

    _pattern_bracket_range_endpoint: ($) =>
      choice(
        $.pattern_bracket_character_source,
        $._pattern_operator_bracket_character,
        $.pattern_collating_symbol_source,
        $.pattern_bracket_hyphen_source,
        $.escaped_character,
        $.single_quoted,
        $.double_quoted,
        $.dollar_single_quoted,
        $.parameter_expansion,
        $.command_substitution,
        $.arithmetic_expansion,
        $.backquote_substitution,
      ),

    pattern_bracket_character_source: ($) =>
      choice(
        $._pattern_bracket_character_token,
        $._pattern_bracket_left,
        $._pattern_bracket_exclamation,
        $._pattern_character_class_colon,
        $._pattern_collating_dot,
        $._pattern_equivalence_equals,
      ),

    pattern_bracket_range_operator_source: ($) =>
      $._pattern_bracket_hyphen_token,

    _pattern_character_class_colon: (_) => token.immediate(prec(-3, ":")),

    _pattern_collating_dot: (_) => token.immediate(prec(-2, ".")),

    _pattern_equivalence_equals: (_) => token.immediate(prec(-2, "=")),

    escaped_character: (_) => token(seq("\\", /[^\n]/)),

    single_quoted: ($) =>
      seq(
        "'",
        optional($.single_quote_content),
        choice(
          "'",
          alias($._here_document_boundary, $.here_document_end_recovery),
        ),
      ),

    single_quote_content: ($) =>
      repeat1(choice(token.immediate(/[^'\n]+/), $._newline)),

    double_quoted: ($) =>
      seq(
        '"',
        repeat(doubleQuotedPart($)),
        choice(
          '"',
          alias($._here_document_boundary, $.here_document_end_recovery),
        ),
      ),

    double_quote_text: ($) =>
      prec.right(
        choice("$", logicalPlainSource($, $._double_quote_text_chunk)),
      ),

    _double_quote_text_chunk: (_) =>
      prec.right(
        repeat1(choice(token.immediate(prec(-1, /[^"$`\\\n]+/)), "\\")),
      ),

    double_quote_escape: (_) =>
      token.immediate(seq("\\", choice("$", "`", '"', "\\"))),

    dollar_single_quoted: ($) =>
      prec(
        2,
        seq(
          "$'",
          repeat(
            choice(
              $.dollar_single_quote_text,
              $.dollar_single_quote_escape,
              alias($._newline, $.dollar_single_quote_text),
            ),
          ),
          choice(
            "'",
            alias($._here_document_boundary, $.here_document_end_recovery),
          ),
        ),
      ),

    dollar_single_quote_escape: (_) =>
      token.immediate(
        seq(
          "\\",
          choice(
            seq("x", /[0-9A-Fa-f]+/),
            /[0-7]{1,3}/,
            seq("c", choice(seq("\\", "\\"), /[^\\\n]/)),
            /[^\n]/,
            "\n",
          ),
        ),
      ),

    parameter_expansion: ($) =>
      parameterExpansion($, $._braced_parameter_expansion),

    _braced_parameter_expansion: ($) =>
      bracedParameterExpansion(
        $,
        $._parameter_expansion_tail,
        $._parameter_tail_recovery_boundary,
      ),

    parameter_expansion_recovery: ($) =>
      $._parameter_expansion_recovery_boundary,

    _special_parameter_hash: (_) => "#",

    _special_parameter_except_hash: (_) => /[0*@?$!-]/,

    special_parameter: ($) =>
      choice($._special_parameter_except_hash, $._special_parameter_hash),

    positional_parameter: ($) =>
      seq($._braced_positional_parameter_start, $._braced_numeric_parameter),

    _braced_numeric_parameter: (_) => /[0-9]+/,

    parameter_length_operator: (_) => "#",

    parameter_value_operator: (_) =>
      choice(":-", ":=", ":?", ":+", "-", "=", "?", "+"),

    parameter_pattern_operator: (_) => prec(2, choice("%%", "##", "%", "#")),

    parameter_word: ($) =>
      choice(
        $._parameter_tilde_source,
        seq($._parameter_pattern_part, optional($._parameter_source_tail)),
      ),

    parameter_pattern: ($) =>
      prec.right(
        1,
        choice(
          $._parameter_tilde_source,
          seq($._parameter_pattern_part, optional($._parameter_source_tail)),
        ),
      ),

    _parameter_source_tail: ($) => repeat1($._parameter_pattern_part),

    _parameter_tilde_source: ($) =>
      prec.right(
        choice(
          seq(
            alias($._parameter_tilde_expansion, $.tilde_expansion),
            prec(2, alias($._literal_slash, $.literal)),
            repeat($._parameter_pattern_part),
          ),
          alias($._parameter_terminal_tilde_expansion, $.tilde_expansion),
        ),
      ),

    _parameter_pattern_part: ($) =>
      choice(
        $._parameter_non_slash_part,
        prec(-1, alias($._literal_slash, $.literal)),
      ),

    command_substitution: ($) =>
      commandSubstitution($, $._command_or_arithmetic_substitution_start),

    _command_or_arithmetic_substitution_start: ($) =>
      prec.right(
        1,
        seq(
          $._command_substitution_start,
          optional($._command_substitution_initial_continuations),
        ),
      ),

    command_substitution_body: ($) =>
      prec.left(commandSubstitutionSequenceBody($)),

    _arithmetic_expansion_start: ($) =>
      seq($._command_or_arithmetic_substitution_start, "("),

    arithmetic_expansion: ($) =>
      prec.dynamic(
        ARITHMETIC_AMBIGUITY_PRECEDENCE,
        seq(
          $._arithmetic_expansion_start,
          optional($._arithmetic_layout),
          choice(
            seq(
              field(
                "expression",
                choice(
                  prec.dynamic(2, $._arithmetic_assignment_expression),
                  $.arithmetic_dynamic_expression,
                ),
              ),
              arithmeticClosingLayout($),
              arithmeticExpansionEnd($),
            ),
            alias($._here_document_boundary, $.here_document_end_recovery),
          ),
        ),
      ),

    _arithmetic_assignment_expression: ($) =>
      choice(
        $.arithmetic_assignment_expression,
        $._arithmetic_conditional_expression,
      ),

    arithmetic_number: (_) =>
      choice(
        token(prec(2, /0[xX][0-9A-Fa-f]+/)),
        token(/[1-9][0-9]*/),
        token(/0[0-7]*/),
      ),

    _arithmetic_layout: ($) => repeat1(arithmeticLayoutUnit($)),

    _pattern_bracket_left: (_) => token.immediate("["),

    _pattern_bracket_exclamation: (_) => token.immediate("!"),

    newline_list: ($) =>
      repeat1(
        choice(
          $.here_document_sequence,
          $._newline,
          $._blank_line,
          $._continued_blank_line,
          $._comment_line,
        ),
      ),

    linebreak: ($) => $.newline_list,

    _horizontal_layout: ($) =>
      prec.right(1, repeat1(choice($._blank, prec(2, $.line_continuation)))),

    _word_separator: ($) =>
      prec.right(
        2,
        choice(
          seq($._blank, repeat(choice($._blank, $.line_continuation))),
          continuedWordSeparator($),
        ),
      ),

    _free_trailing_layout: ($) =>
      prec.right(1, choice($._horizontal_layout, $._free_comment)),

    _comment_line: ($) => seq($._free_comment, $._newline),

    _continued_blank_line: ($) =>
      prec.dynamic(2, seq(continuedBlankLineLayout($), $._newline)),

    _blank_line: ($) => seq($._blank, $._newline),
